# YtcLib

./: CMakeLists.txt  README.md
include/: YtcCollection.hpp  YtcError.hpp  YtcMemory.hpp  YtcString.hpp
src/: CMakeLists.txt  YtcDbg.cpp  YtcDbg.hpp  YtcString.hpp
test/: CMakeLists.txt  Test.cpp
